--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -107,6 +107,17 @@
   
   <servlet>
     <description></description>
+    <display-name>TrainServletCreate</display-name>
+    <servlet-name>TrainServletCreate</servlet-name>
+    <servlet-class>train.web.servlet.TrainServletCreate</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>TrainServletCreate</servlet-name>
+    <url-pattern>/TrainServletCreate</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <description></description>
     <display-name>ReservationServletCreate</display-name>
     <servlet-name>ReservationServletCreate</servlet-name>
     <servlet-class>reservation.web.servlet.ReservationServletCreate</servlet-class>
