create backend for ticket

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -138,6 +138,17 @@
     <url-pattern>/ReservationServletCreate</url-pattern>
   </servlet-mapping>
   
+  <servlet>
+    <description></description>
+    <display-name>TicketServletCreate</display-name>
+    <servlet-name>TicketServletCreate</servlet-name>
+    <servlet-class>ticket.web.servlet.TicketServletCreate</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>TicketServletCreate</servlet-name>
+    <url-pattern>/TicketServletCreate</url-pattern>
+  </servlet-mapping>
+  
   
   <servlet>
     <description></description>
