--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -107,6 +107,17 @@
   
   <servlet>
     <description></description>
+    <display-name>PassengerServletRead</display-name>
+    <servlet-name>PassengerServletRead</servlet-name>
+    <servlet-class>passenger.web.servlet.PassengerServletRead</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>PassengerServletRead</servlet-name>
+    <url-pattern>/PassengerServletRead</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <description></description>
     <display-name>PaymentServletCreate</display-name>
     <servlet-name>PaymentServletCreate</servlet-name>
     <servlet-class>payment.web.servlet.PaymentServletCreate</servlet-class>
