finishing backend for reading reservation

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -151,6 +151,17 @@
   
   <servlet>
     <description></description>
+    <display-name>ReservationServletRead</display-name>
+    <servlet-name>ReservationServletRead</servlet-name>
+    <servlet-class>reservation.web.servlet.ReservationServletRead</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ReservationServletRead</servlet-name>
+    <url-pattern>/ReservationServletRead</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <description></description>
     <display-name>TicketServletCreate</display-name>
     <servlet-name>TicketServletCreate</servlet-name>
     <servlet-class>ticket.web.servlet.TicketServletCreate</servlet-class>
