--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -337,6 +337,17 @@
     <url-pattern>/findTicket</url-pattern>
   </servlet-mapping>
   
+  <servlet>
+    <description></description>
+    <display-name>findPayment</display-name>
+    <servlet-name>findPayment</servlet-name>
+    <servlet-class>payment.web.servlet.findPayment</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>findPayment</servlet-name>
+    <url-pattern>/findPayment</url-pattern>
+  </servlet-mapping>
+  
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>login.jsp</welcome-file>
